# PocketHLE

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.ru.md
.cargo/: config.toml
.github/workflows/: ci.yml
build-support/cmake/: android-arm64-v8a.toolchain.cmake  android-armeabi-v7a.toolchain.cmake
crates/pocket-cab/: Cargo.toml
crates/pocket-cab/src/: lib.rs
crates/pocket-core/: Cargo.toml
crates/pocket-core/src/: lib.rs
crates/pocket-cpu/: Cargo.toml
crates/pocket-cpu/src/: lib.rs  stub.rs  unicorn.rs
crates/pocket-kernel/: Cargo.toml
crates/pocket-kernel/src/: font.rs  framebuffer.rs  gdi.rs  lib.rs  vfs.rs
crates/pocket-library/: Cargo.toml
crates/pocket-library/src/: lib.rs
crates/pocket-pe/: Cargo.toml
crates/pocket-pe/src/: lib.rs  resources.rs
crates/pocket-winceapi/: Cargo.toml
crates/pocket-winceapi/data/: aygshell-ordinals.json  coredll-ordinals.json
crates/pocket-winceapi/src/: aygshell.rs  coredll.rs  gx.rs  hss.rs  lib.rs  ole32.rs  ordinals.rs
frontends/pocket-android/: README.md  settings.gradle.kts
frontends/pocket-android-jni/: Cargo.toml  build.rs
frontends/pocket-android-jni/src/: lib.rs  runner.rs
frontends/pocket-android/app/: build.gradle.kts
frontends/pocket-android/app/src/main/: AndroidManifest.xml
frontends/pocket-android/app/src/main/java/com/pockethle/app/: GameActivity.kt  GameAdapter.kt  GameEntry.kt  GameSettingsActivity.kt  Library.kt  MainActivity.kt  NativeBridge.kt  SettingsActivity.kt
frontends/pocket-android/app/src/main/res/drawable/: ic_delete.xml  ic_game.xml  ic_play.xml  ic_settings.xml
frontends/pocket-android/app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_settings.xml  item_game.xml
frontends/pocket-android/app/src/main/res/menu/: main_menu.xml
frontends/pocket-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontends/pocket-android/app/src/main/res/values-night/: colors.xml
frontends/pocket-android/app/src/main/res/xml/: preferences_game.xml  preferences_global.xml
frontends/pocket-cli/: Cargo.toml
frontends/pocket-cli/src/: archive.rs  main.rs
frontends/pocket-desktop/: Cargo.toml
frontends/pocket-desktop/src/: app.rs  main.rs  runner.rs
tools/: extract-ordinals.py
