[workspace]
resolver = "2"
members = [
    "crates/pocket-cab",
    "crates/pocket-pe",
    "crates/pocket-cpu",
    "crates/pocket-kernel",
    "crates/pocket-winceapi",
    "crates/pocket-core",
    "frontends/pocket-cli",
    "frontends/pocket-android-jni",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/j92580498-max/PocketHLE"
homepage = "https://github.com/j92580498-max/PocketHLE"
authors = ["PocketHLE Contributors"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
cab = "0.6"
goblin = { version = "0.8", default-features = false, features = ["pe32", "std"] }
indexmap = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# CPU emulation backend. Optional / behind feature flags so a basic
# `cargo build` works without cmake or libunicorn installed.
unicorn-engine = "2"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.dev]
opt-level = 1
