[workspace]
resolver = "2"
members = [
    "crates/pocket-cab",
    "crates/pocket-pe",
    "crates/pocket-cpu",
    "crates/pocket-kernel",
    "crates/pocket-winceapi",
    "crates/pocket-core",
    "crates/pocket-library",
    "frontends/pocket-cli",
    "frontends/pocket-desktop",
    "frontends/pocket-android-jni",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/j92580498-max/PocketHLE"
homepage = "https://github.com/j92580498-max/PocketHLE"
authors = ["PocketHLE Contributors"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
byteorder = "1.5"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
cab = "0.6"
goblin = { version = "0.8", default-features = false, features = ["pe32", "std"] }
indexmap = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# CPU emulation backend. Optional / behind feature flags so a basic
# `cargo build` works without cmake or libunicorn installed. We only
# emulate ARM PE images, so disable upstream's `arch_all` default and
# pull in just the ARM + AArch64 QEMU softmmu targets. Building x86_64
# softmmu by accident is what breaks the Android NDK cross-compile
# (NDK clang chokes on QEMU's x86 cpuid.h).
unicorn-engine = { version = "2", default-features = false, features = ["arch_arm", "arch_aarch64"] }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.dev]
opt-level = 1
