[package]
name = "pocket-cab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Microsoft .CAB extractor wrapper for PocketHLE."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
cab.workspace = true
