[package]
name = "pocket-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ARM CPU emulation backend for PocketHLE."

[features]
# Default: no real CPU. The `Stub` backend records register/memory state
# transitions so unit tests and the `pe-info` CLI subcommand can run on
# any host without external dependencies.
default = []
# Enable to compile against `unicorn-engine`. This requires cmake and a
# C compiler at build time.
unicorn = ["dep:unicorn-engine"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
bitflags = "2"
unicorn-engine = { workspace = true, optional = true }
