[package]
name = "pocket-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Process model, virtual memory and IAT-thunk management for PocketHLE."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
indexmap.workspace = true
byteorder.workspace = true

pocket-cpu = { path = "../pocket-cpu" }
pocket-pe = { path = "../pocket-pe" }

[dev-dependencies]
tempfile = "3"
