[package]
name = "pocket-library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Game library / configuration management for PocketHLE GUI frontends."

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

pocket-cab = { path = "../pocket-cab" }
pocket-pe = { path = "../pocket-pe" }
