[package]
name = "pocket-android-jni"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "JNI bridge that exposes the PocketHLE core to the Android frontend."

[lib]
name = "pockethle_jni"
crate-type = ["cdylib", "rlib"]

[features]
default = []
unicorn = ["pocket-core/unicorn"]

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
android_logger = "0.13"
jni = "0.21"
pocket-core = { path = "../../crates/pocket-core" }
pocket-library = { path = "../../crates/pocket-library" }
