[package]
name = "pocket-android-jni"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "JNI bridge that exposes the PocketHLE core to the Android frontend."

[lib]
name = "pockethle_jni"
crate-type = ["cdylib", "rlib"]

[features]
# Default builds use the trace-only stub CPU. Real ARM CPU emulation
# (unicorn-engine) currently does not cross-compile to
# `aarch64-linux-android` / `armv7-linux-androideabi` because
# unicorn-engine-sys 2.1.5 ships QEMU's autoconf-style `qemu/configure`
# which detects the *build host's* CPU (x86_64) and compiles the
# i386 TCG JIT backend, then NDK clang chokes on QEMU's `cpuid.h`.
# The desktop and CLI frontends build fine with `--features unicorn`
# because they target the same CPU as the build host.
default = []
unicorn = ["pocket-core/unicorn"]

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
android_logger = "0.13"
jni = "0.21"
pocket-core = { path = "../../crates/pocket-core" }
pocket-library = { path = "../../crates/pocket-library" }
