[package]
name = "pocket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux command-line frontend for PocketHLE."

[[bin]]
name = "pockethle"
path = "src/main.rs"

[features]
default = []
unicorn = ["pocket-core/unicorn"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true

pocket-core = { path = "../../crates/pocket-core" }
