[package]
name = "pocket-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux command-line frontend for PocketHLE."

[[bin]]
name = "pockethle"
path = "src/main.rs"

[features]
# By default we ship a fully-functional binary: real ARM CPU
# (`unicorn`) plus a host preview window (`display`) so a user can run
# `pockethle run game.cab` and see something on screen without
# rebuilding. Use `--no-default-features` for a fast cmake-less build
# (e.g. on CI machines without libclang) — that gives a trace-only
# stub CPU and no live window.
default = ["unicorn", "display"]
unicorn = ["pocket-core/unicorn"]
display = ["minifb"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
minifb = { version = "0.27", optional = true }
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

pocket-core = { path = "../../crates/pocket-core" }
