[package]
name = "pocket-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cross-platform desktop launcher GUI for PocketHLE (Linux + Windows)."

[[bin]]
name = "pockethle-gui"
path = "src/main.rs"

[features]
default = []
unicorn = ["pocket-core/unicorn"]

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
directories = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

pocket-core = { path = "../../crates/pocket-core" }
pocket-library = { path = "../../crates/pocket-library" }
